--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
              -->
         </ul>
     </div>
- </div>   
+ </div> 
+ <footer>
+    <p>Copyright &#169; 2023 Sep Bhashana Chamodya. All Right Reserved. </p>
+</footer>  
     
  <script src="./script.js"></script>
 </body>
